# yew_test

./: Cargo.toml  Trunk.toml  index.html
src/: lib.rs  main.rs
