[package]
name = "my_yew_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
js-sys = "0.3"
gloo = "0.4"
wasm-bindgen = "0.2"
web-sys = "0.3.60"
num-bigint = "0.4.3"
num-traits = "0.2.15"
wasm-timer = "0.2.5"